# face-detection-attendance-system

./: .gitignore  README.md  api.py  bulk_enroll.py  colab_setup.ipynb  enroll.py  instructions.txt  logger.py  main.py  pyproject.toml  recognize - Copy.py  recognize.py  webhook_logger.py
